--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,9 @@ nav a:hover{
   border-radius:14px;
   box-shadow:0 10px 28px rgba(0,0,0,.15);
 }
+section.gallery-section{
+  padding:35px 30px;
+}
 
   section h1,
   section h2{
