--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -696,4 +696,15 @@ html[lang="en"] .about-card p {
   font-size: 16px;
   line-height: 1.7;
 }
+.media-section h2 {
+  margin-top: 25px;
+  color: #8b2c00;
+}
+
+.media-section .subtitle {
+  font-size: 17px;
+  margin-bottom: 25px;
+  color: #444;
+}
+
 
